[tool.poetry]
name = "cog-visualizer"
version = "0.1.0"
description = ""
authors = ["martijnbeeks <49335034+martijnbeeks@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
matplotlib = "^3.9.3"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
